--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
     align-items: center;
     justify-content: center;
     color:white;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 .card{
     max-width: 300px;
@@ -22,6 +24,7 @@
     justify-content: space-around;
     background-color: hsl(213, 19%, 18%);
     padding: 24px;
+    margin: 10px;
 }
 span{
     width: 50px;
@@ -76,4 +79,23 @@ button:hover{
     transition: 500ms;
     cursor: pointer;
 }
-
+p, h1{
+    text-transform: capitalize;
+    margin-top: 5px;
+}
+.card1{
+    max-width: 300px;
+    height: 330px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: hsl(213, 19%, 18%);
+    padding: 24px;
+    margin: 10px;
+}
+#txt{
+    width: 250px;
+    color: hsl(25, 97%, 53%);
+    font-size: 1.5rem;
+}
