--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     flex-direction: column;
 }
 .card{
-    max-width: 300px;
+    width: 300px;
     height: 330px;
     border-radius: 20px;
     display: flex;
@@ -81,21 +81,27 @@ button:hover{
 }
 p, h1{
     text-transform: capitalize;
-    margin-top: 5px;
+    margin-top:10px;
 }
 .card1{
-    max-width: 300px;
+    width: 300px;
     height: 330px;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
     background-color: hsl(213, 19%, 18%);
     padding: 24px;
     margin: 10px;
+    display: none;
 }
 #txt{
     width: 280px;
     color: hsl(25, 97%, 53%);
     font-size: 1.5rem;
+    margin-top: 20px;
+}
+.center{
+    text-align: center;
 }
