--- a/style.css
+++ b/style.css
@@ -99,8 +99,15 @@ p, h1{
 #txt{
     width: 280px;
     color: hsl(25, 97%, 53%);
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin-top: 20px;
+}
+#txt:hover{
+    width: 280px;
+    color: white;
+    font-size: 1.2rem;
+    margin-top: 20px;
+    background-color: gray;
 }
 .center{
     text-align: center;
