--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ span{
     width: 50px;
     height: 50px;
     border-radius: 35px;
-    background-color: gray;
+    background-color: rgba(128, 128, 128, 0.418);
     color: white;
     margin: 5px;
     display: flex;
@@ -97,11 +97,12 @@ p, h1{
     padding: 24px;
     margin: 10px;
     display: none;
+    transition: 300ms;
 }
 #txt{
     width: 280px;
     color: hsl(25, 97%, 53%);
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     margin-top: 20px;
 }
 #txt:hover{
@@ -109,7 +110,7 @@ p, h1{
     color: white;
     font-size: 1.1rem;
     margin-top: 20px;
-    background-color: gray;
+    background-color: rgba(128, 128, 128, 0.651);
 }
 .center{
     text-align: center;
